Opened 14 years ago

Closed 14 years ago

Last modified 14 years ago

#1330 closed defect (fixed)

Invalid reads when decoding corrupted mpeg2video

Reported by: Carl Eugen Hoyos Owned by:
Priority: normal Component: avcodec
Version: git-master Keywords: mpeg2video roundup
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description (last modified by Carl Eugen Hoyos)

(issue 1872)

I will attach a corrupted mpeg2video mp4 file that causes invalid reads on decoding.

$ ffmpeg -i test.mp4
ffmpeg version N-40924-g349c624 Copyright (c) 2000-2012 the FFmpeg developers
  built on May 21 2012 07:59:42 with gcc 4.3.2
  configuration: --cc=/usr/local/gcc-4.3.2/bin/gcc --enable-gpl --enable-libopenjpeg --enable-libvorbis --enable-libspeex --enable-libmp3lame --enable-libtheora --extra-ldflags=-lm
  libavutil      51. 53.100 / 51. 53.100
  libavcodec     54. 21.101 / 54. 21.101
  libavformat    54.  5.101 / 54.  5.101
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 75.100 /  2. 75.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 15.100 /  0. 15.100
  libpostproc    52.  0.100 / 52.  0.100
[mpeg2video @ 0x8f12d00] slice below image (41 >= 36)
Input #0, mov,mp4,m4a,3gp,3g2,mj2, from 'test.mp4':
  Metadata:
    major_brand     : isom
    minor_version   : 512
    compatible_brands: isomiso2mp41
    creation_time   : 1970-01-01 00:00:00
    encoder         : Lavf52.61.0
  Duration: 00:00:29.32, start: 0.000000, bitrate: 195 kb/s
    Stream #0:0(und): Video: mpeg2video (Main) (mp4v / 0x7634706D), yuv420p, 720x576 [SAR 16:15 DAR 4:3], 8000 kb/s, 24.52 fps, 25 tbr, 50 tbn, 50 tbc
    Metadata:
      creation_time   : 1970-01-01 00:00:00
      handler_name    : VideoHandler
At least one output file must be specified

Attachments (4)

test.mp4 (700.0 KB ) - added by Carl Eugen Hoyos 14 years ago.
valgrind.log (31.2 KB ) - added by Carl Eugen Hoyos 14 years ago.
ticket1330c.log (31.4 KB ) - added by Carl Eugen Hoyos 14 years ago.
ticket1330mmx.log (54.5 KB ) - added by Carl Eugen Hoyos 14 years ago.

Download all attachments as: .zip

Change History (9)

by Carl Eugen Hoyos, 14 years ago

Attachment: test.mp4 added

by Carl Eugen Hoyos, 14 years ago

Attachment: valgrind.log added

comment:1 by Carl Eugen Hoyos, 14 years ago

Description: modified (diff)
Status: newopen

comment:2 by Michael Niedermayer, 14 years ago

cant reproduce

by Carl Eugen Hoyos, 14 years ago

Attachment: ticket1330c.log added

by Carl Eugen Hoyos, 14 years ago

Attachment: ticket1330mmx.log added

comment:3 by Carl Eugen Hoyos, 14 years ago

Still reproducible on ia32 both with and without --disable-optimizations

comment:4 by Michael Niedermayer, 14 years ago

Resolution: fixed
Status: openclosed

comment:5 by Carl Eugen Hoyos, 14 years ago

Keywords: roundup added
Note: See TracTickets for help on using tickets.