mpeg12dec: move checks out of decode picture coding extension.

Fixes out of array reads
Fixes Ticket1330

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>